--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,21 @@
+<header>
 <h1>
   {{title}}
 </h1>
 
+<nav>
+  <ul>
+    <li> <a [routerLink] = "['/']"> Home </a> </li>
+    <li> <a [routerLink] = "['/list']"> List </a> </li>
+  </ul>
+</nav>
+
+</header>
+
+
+<section id="main">
 <h2>
   <router-outlet> router-outlet shoule go here.. </router-outlet>
 </h2>
+
+</section>
