refactored code: ninjas are now  into listing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,13 @@
 
 
 <section id="main">
-<h2>
-  <router-outlet> router-outlet shoule go here.. </router-outlet>
-</h2>
+  
+
+  <router-outlet> </router-outlet>
+
+  <!--
+  <router-outlet> router-outlet here.. </router-outlet>
+  <ng-content> ng-content here..</ng-content>
+  -->
 
 </section>
