--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,12 @@
-<p>
-  home works! SHerif
+<p [ngClass]="classes">
+  Sherif - home works!
 </p>
 
-
-<p [ngClass]="classes"> ngclasss exmaple </p>
-
-<p *ngIf = "Iftest">*ngIf sample true </p>
-
-
-<p> Ninja Lsiting </p>
-<ul id = "ninja-listing">
-  <li *ngFor = "let ninja of ninjas">
-  {{ninja.name}} has {{ninja.belt}} belt
-   </li>
-</ul>
 
 <style>
 .red{color: darkred}
 .blue{color:blue}
 .underline{text-decoration: underline}
 </style>
+
+<p *ngIf = "Iftest">*ngIf sample true </p>
