--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -5,7 +5,7 @@
     <div class="single-ninja">
       <!-- ninja-belt background color-->
        <span [ngStyle]="{background: ninja.belt}"> {{ninja.belt}} belt </span>
-       <h3>  {{ninja.name}} </h3>
+       <h3>  {{ninja.name | uppercase | slice:1:3}} </h3>
     </div>
 
    </li>
